<resources>
    <string name="app_name">Renticle</string>
    <string name="hi">Hi!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Signup</string>
    <string name="login">Login</string>
    <string name="sign_in_as_user">Sign In as a User</string>
    <string name="sign_in_as_admin">Sign in as an Admin</string>
    <string name="select_option_string">Select an option from below:</string>
    <string name="forgot_password_msg">Enter the email address \nassociated with the account</string>
    <string name="email_link_string">We will be sending you a link to reset \nyour password to your email</string>
    <string name="enter_email">Enter email address</string>
    <string name="send_string">Send</string>
</resources>
